fixed outdented stuff on mobile

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@
 .mt2 { margin-top: 2em; }
 
 .list-reset {
-  padding: 0;
+  padding-left: 1.2em;
   margin: 0 0 1em;
 }
 
@@ -93,5 +93,10 @@
 
   .item.last {
     padding-right: 0;
+  }
+
+  .list-reset {
+    padding: 0;
+    margin: 0 0 1em;
   }
 }
